css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    
  font: normal 100%/1.5 sans-serif; 
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {

    html {
        font-size: 110%;
    }

}

@media only screen and (min-width: 90em) {

    html {
        font-size: 120%;
    }

}

@media only screen and (min-width: 120em) {

    html {
        font-size: 130%;
    }

}

*, *:before, *:after {
    box-sizing: inherit;

}

img {
    dispay: block;
    width: 100%;
}

header {
    background-color: #ccc;
    overflow: hidden;
}

footer {
    background-color: #BABABA;
    overflow: hidden;
}

.intro {
    background-color: #E6E6E6;
    text-align: center;
}

body {
    padding: 0;
    margin: 0;
}

h1 { 
    padding: 0;
    margin: 0;
    font-family: sans-serif;
}

.medium-grey {
    background-color: #E6E6E6;
}

span {
    display:none;
}

.light-grey {
    background-color: #CFCFCF;
}

.grey {
    background-color:#E6E6E6;
}

.nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
    font-family: sans-serif; 
}

.nav a,
.nav a:visited{
    text-decoration:none;
    color: #0074D9;

}

@media only screen and (min-width: 22em) {
    
    .title {
        text-align: center;
    }
    
    .nav li {
        display: inline-block;
        border: 0;
    }
    
    .nav {
        text-align: center;
    }
    
    .center {
        text-align:center;   
}
    
   span {
       display: inline;
   } 
    
}

@media only screen and (min-width: 50em) {
    
    h1 { 
        float: left;       
}
    .nav {
        float: left;
    }
    
    .nav-right {
        float: right;
        padding-right: 1em;
        
    }
    
     span {
       display: inline;
   } 
    
    
}

@media only screen and (min-width: 60em) {
    
    dt {
        float: left;
        Clear: left;
        width: 8rem;
    }
        
        dd {
            float: left;
            
}
    
    .gutter-space {
        padding-left: 1em;
    }
    
     span {
       display: inline;
   } 
    
}
 

    
    

